<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dustBlue"
    tools:context=".MovieDetails">


    <ImageView
        android:id="@+id/orig"
        android:layout_width="0dp"
        android:layout_height="310dp"
        android:contentDescription="@string/imgTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orig" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="259dp" />

    <ImageView
        android:id="@+id/mask"
        android:layout_width="394dp"
        android:layout_height="286dp"
        android:contentDescription="@string/mask"
        app:layout_constraintBottom_toBottomOf="@+id/tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/orig"
        app:srcCompat="@drawable/mask" />

    <ImageView
        android:id="@+id/pg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/pg"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/pg" />

    <TextView

        android:id="@+id/mainTitle"
        style="@style/mainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/avengers_end_game"
        android:textColor="@color/titleColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tag"
        style="@style/tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/tag"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toStartOf="@+id/star2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tag"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toStartOf="@+id/star3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star1"
        app:layout_constraintTop_toBottomOf="@+id/tag"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toStartOf="@+id/star4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star2"
        app:layout_constraintTop_toBottomOf="@+id/tag"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/star4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/star"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toStartOf="@+id/star5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/star3"
        app:layout_constraintTop_toBottomOf="@+id/tag"
        app:srcCompat="@drawable/star_icon" />

    <ImageView
        android:id="@+id/star5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/empty_star"
        app:layout_constraintBottom_toBottomOf="@+id/review"
        app:layout_constraintEnd_toStartOf="@+id/review"
        app:layout_constraintStart_toEndOf="@+id/star4"
        app:layout_constraintTop_toBottomOf="@+id/tag"
        app:srcCompat="@drawable/star_icon_empty" />

    <TextView
        android:id="@+id/review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/review"
        android:textColor="@color/review"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/star5"
        app:layout_constraintTop_toBottomOf="@+id/tag" />

    <TextView
        android:id="@+id/storyline"
        style="@style/mainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/storyline"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/review" />

    <TextView
        android:id="@+id/after_the_d"
        style="@style/after_the_d"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_thin"
        android:text="@string/after_the_d"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storyline" />

    <TextView
        android:id="@+id/textView5"
        style="@style/mainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cast"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/after_the_d" />

    <ImageView
        android:id="@+id/robert_downey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/robert_downey"
        app:layout_constraintEnd_toStartOf="@+id/chris_evans"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/robert_downey" />

    <ImageView
        android:id="@+id/chris_evans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/chris_evans"
        app:layout_constraintEnd_toStartOf="@+id/mark_ruffalo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/robert_downey"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/chris_evans" />

    <ImageView
        android:id="@+id/mark_ruffalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/mark_ruffalo"
        app:layout_constraintEnd_toStartOf="@+id/chris_hemsworth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chris_evans"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/mark_ruffalo" />

    <ImageView
        android:id="@+id/chris_hemsworth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/chris_hemsworth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mark_ruffalo"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/chris_hemsworth" />

    <TextView
        android:id="@+id/robert_downey_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/robert_downey"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chris_evans_text"
        app:layout_constraintStart_toStartOf="@+id/robert_downey"
        app:layout_constraintTop_toBottomOf="@+id/robert_downey"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/chris_evans_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/chris_evans"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mark_ruffalo_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/robert_downey_text"
        app:layout_constraintTop_toBottomOf="@+id/chris_evans"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mark_ruffalo_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/mark_ruffalo"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/chris_hemsworth_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chris_evans_text"
        app:layout_constraintTop_toBottomOf="@+id/mark_ruffalo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/chris_hemsworth_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/chris_hemsworth"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chris_hemsworth"
        app:layout_constraintStart_toEndOf="@+id/mark_ruffalo_text"
        app:layout_constraintTop_toBottomOf="@+id/chris_hemsworth"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>

